syntax = "proto2";
package crmservice;
option go_package = "etop.vn/backend/pb/services/crmservice";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "common/common.proto";
import "google/protobuf/timestamp.proto";
service MiscService {
    rpc VersionInfo(cm.Empty) returns (cm.VersionInfoResponse);
}

service VtigerService {
    rpc GetContacts(GetContactsRequest) returns (GetContactsResponse);
    rpc CreateOrUpdateContact(Contact) returns (Contact);
    rpc CreateOrUpdateLead(Lead) returns (Lead);
    rpc GetTickets(GetTicketsRequest) returns (GetTicketsResponse);
    rpc CreateOrUpdateTicket(CreateOrUpdateTicketRequest) returns (Ticket);
    rpc GetCategories(cm.Empty) returns (GetCategoriesResponse);
    rpc GetStatus(cm.Empty) returns (GetStatusResponse);
    rpc CountTicketByStatus(CountTicketByStatusRequest) returns (CountTicketByStatusResponse);
    rpc GetTicketStatusCount(cm.Empty) returns (GetTicketStatusCountResponse);
}

message CountTicketByStatusRequest {
    optional string status = 1 [(gogoproto.nullable) = true];
}

message GetTicketStatusCountResponse {
    repeated CountTicketByStatusResponse status_count = 1 [(gogoproto.nullable) = false];
}

message CountTicketByStatusResponse{
    optional string code = 1 [(gogoproto.nullable) = false];
    optional int32 count = 2 [(gogoproto.nullable) = false];
}

message GetContactsResponse {
    repeated Contact contacts = 1;
}

message GetContactsRequest {
    optional string text_search = 3 [(gogoproto.nullable) = false];
    optional int32 page = 1 [(gogoproto.nullable) = false];
    optional int32 perpage = 2 [(gogoproto.nullable) = false];
}

message Contact{
	optional string contact_no= 1 [(gogoproto.nullable) = false];
	optional string phone= 2 [(gogoproto.nullable) = false];
	optional string lastname= 3 [(gogoproto.nullable) = false];
	optional string mobile= 4 [(gogoproto.nullable) = false];
	optional string leadsource= 5 [(gogoproto.nullable) = false];
    optional string email= 6 [(gogoproto.nullable) = false];
    optional string description= 7 [(gogoproto.nullable) = false];
	optional string secondaryemail= 8 [(gogoproto.nullable) = false];
	optional string modifiedby= 10 [(gogoproto.nullable) = false];
	optional string source= 11 [(gogoproto.nullable) = false];
	optional int64 etop_id = 12 [(gogoproto.nullable) = false];
	optional string company= 13 [(gogoproto.nullable) = false];
	optional string website= 14 [(gogoproto.nullable) = false];
	optional string lane= 15 [(gogoproto.nullable) = false];
	optional string city= 16 [(gogoproto.nullable) = false];
	optional string state= 17 [(gogoproto.nullable) = false];
	optional string country= 18 [(gogoproto.nullable) = false];
	optional string orders_per_day = 19 [(gogoproto.nullable) = false];
	optional string used_shipping_provider= 20 [(gogoproto.nullable) = false];
    optional string id = 21 [(gogoproto.nullable) = false];
    optional string firstname= 22 [(gogoproto.nullable) = false];
    optional google.protobuf.Timestamp createdtime = 23 [(gogoproto.nullable) = false];
    optional google.protobuf.Timestamp modifiedtime = 24 [(gogoproto.nullable) = false];
    optional string assigned_user_id = 25 [(gogoproto.nullable) = false];
}

message Lead {
    optional string contact_no= 1 [(gogoproto.nullable) = false];
	optional string phone= 2 [(gogoproto.nullable) = false];
	optional string lastname= 3 [(gogoproto.nullable) = false];
	optional string mobile= 4 [(gogoproto.nullable) = false];
	optional string leadsource= 5 [(gogoproto.nullable) = false];
	optional string email= 6 [(gogoproto.nullable) = false];
	optional string secondaryemail= 7 [(gogoproto.nullable) = false];
    optional string assigned_user_id = 8 [(gogoproto.nullable) = false];
    optional string description = 9 [(gogoproto.nullable) = false];
	optional string modifiedby= 10 [(gogoproto.nullable) = false];
	optional string source= 11 [(gogoproto.nullable) = false];
	optional int64 etop_id = 12 [(gogoproto.nullable) = false];
	optional string company= 13 [(gogoproto.nullable) = false];
	optional string website= 14 [(gogoproto.nullable) = false];
	optional string lane= 15 [(gogoproto.nullable) = false];
	optional string city= 16 [(gogoproto.nullable) = false];
	optional string state= 17 [(gogoproto.nullable) = false];
	optional string country= 18 [(gogoproto.nullable) = false];
	optional string orders_per_day = 19 [(gogoproto.nullable) = false];
	optional string used_shipping_provider= 20 [(gogoproto.nullable) = false];
    optional string id = 21 [(gogoproto.nullable) = false];
    optional string firstname= 22 [(gogoproto.nullable) = false];
}

message GetTicketsRequest {
    optional int32 page = 1 [(gogoproto.nullable) = false];
    optional int32 perpage = 2 [(gogoproto.nullable) = false];
    optional TicketRequest ticket = 3 [(gogoproto.nullable) = false];
    optional OrderBy orderby = 4 [(gogoproto.nullable) = false];
}

message GetTicketsResponse {
    repeated Ticket tickets = 1;
}

message OrderBy{
    optional string field = 1 [(gogoproto.nullable) = false];
    optional string sort = 2 [(gogoproto.nullable) = false];
}

message CreateOrUpdateTicketRequest{
    optional Account account = 1 [(gogoproto.nullable) = false];
    optional TicketRequest ticket = 2 [(gogoproto.nullable) = false];
}

message TicketRequest {
    optional string id = 1 [(gogoproto.nullable) = false];
    optional string code =  2 [(gogoproto.nullable) = false];
    optional string title = 3 [(gogoproto.nullable) = false];
    optional string value =  4 [(gogoproto.nullable) = false];
    optional string old_value =  5 [(gogoproto.nullable) = false];
    optional string reason =  6 [(gogoproto.nullable) = false];
    optional int64 etop_id =  7 [(gogoproto.nullable) = false];
    optional int64 order_id =  8 [(gogoproto.nullable) = false];
    optional string order_code =  9 [(gogoproto.nullable) = false];
    optional string ffm_code =  10 [(gogoproto.nullable) = false];
    optional string ffm_url =  11 [(gogoproto.nullable) = false];
    optional int64 ffm_id =  12 [(gogoproto.nullable) = false];
    optional string company =  13 [(gogoproto.nullable) = false];
    optional string provider =  15 [(gogoproto.nullable) = false];
    optional string note =  16 [(gogoproto.nullable) = false];
    optional string environment =  17 [(gogoproto.nullable) = false];
    optional string from_app =  18 [(gogoproto.nullable) = false];
}

message Account {
    optional int64 id =  1 [(gogoproto.nullable) = false];
    optional string full_name =  2 [(gogoproto.nullable) = false];
    optional string short_name =  3 [(gogoproto.nullable) = false];
    optional string phone =  4 [(gogoproto.nullable) = false];
    optional string email =  5 [(gogoproto.nullable) = false];
    optional string company =  6 [(gogoproto.nullable) = false];
}

message Ticket {
    optional string ticket_no = 1 [(gogoproto.nullable) = false];
    optional string assigned_user_id = 2 [(gogoproto.nullable) = false];
    optional int64 parent_id = 3 [(gogoproto.nullable) = false];
    optional string ticketpriorities = 4 [(gogoproto.nullable) = false];
    optional int64 product_id = 5 [(gogoproto.nullable) = false];
    optional string ticketseverities = 6 [(gogoproto.nullable) = false];
    optional string ticketstatus = 7 [(gogoproto.nullable) = false];
    optional string ticketcategories = 8 [(gogoproto.nullable) = false];
    optional string update_log = 9 [(gogoproto.nullable) = false];
    optional string hours = 10 [(gogoproto.nullable) = false];
    optional string days = 11 [(gogoproto.nullable) = false];
    optional google.protobuf.Timestamp createdtime = 12 [(gogoproto.nullable) = false];
    optional google.protobuf.Timestamp modifiedtime = 13 [(gogoproto.nullable) = false];
    optional string from_portal = 14 [(gogoproto.nullable) = false];
    optional string modifiedby = 15 [(gogoproto.nullable) = false];
    optional string ticket_title = 16 [(gogoproto.nullable) = false];
    optional string description = 17 [(gogoproto.nullable) = false];
    optional string solution = 18 [(gogoproto.nullable) = false];
    optional string contact_id = 19 [(gogoproto.nullable) = false];
    optional string source = 20 [(gogoproto.nullable) = false];
    optional string starred = 21 [(gogoproto.nullable) = false];
    optional string tags = 22 [(gogoproto.nullable) = false];
    optional string note = 24 [(gogoproto.nullable) = false];
    optional string ffm_code = 25 [(gogoproto.nullable) = false];
    optional string ffm_url = 26 [(gogoproto.nullable) = false];
    optional int64 ffm_id = 27 [(gogoproto.nullable) = false];
    optional int64 etop_id = 28 [(gogoproto.nullable) = false];
    optional int64 order_id = 29 [(gogoproto.nullable) = false];
    optional string order_code= 30 [(gogoproto.nullable) = false];
    optional string company = 31 [(gogoproto.nullable) = false];
    optional string provider = 32 [(gogoproto.nullable) = false];
    optional string from_app = 33 [(gogoproto.nullable) = false];
    optional string environment = 34 [(gogoproto.nullable) = false];
    optional string code = 35 [(gogoproto.nullable) = false];
    optional string old_value = 36 [(gogoproto.nullable) = false];
    optional string new_value = 37 [(gogoproto.nullable) = false];
    optional string substatus = 38 [(gogoproto.nullable) = false];
    optional string etop_note = 39 [(gogoproto.nullable) = false];
    optional string reason = 40 [(gogoproto.nullable) = false];
    optional string id = 41 [(gogoproto.nullable) = false];
}

message GetCategoriesResponse {
    repeated Category categories = 1;
}

message Category {
    optional string code = 1 [(gogoproto.nullable) = false];
    optional string label = 2 [(gogoproto.nullable) = false];
}

message GetStatusResponse {
    repeated Status status = 1;
}

message Status {
    optional string code = 1 [(gogoproto.nullable) = false];
    optional string count = 2 [(gogoproto.nullable) = false];
}
